[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qwen3-asr-http-service"
version = "0.1.0"
description = "Minimal HTTP service for Qwen3-ASR-1.7B using the transformers backend"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.115,<1.0",
  "python-multipart>=0.0.20,<1.0",
  "qwen-asr==0.0.6",
  "uvicorn[standard]>=0.34,<1.0",
]

[project.optional-dependencies]
cpu = [
  "torch",
  "torchaudio",
]
cu128 = [
  "torch",
  "torchaudio",
]

[project.scripts]
qwen3-asr-http = "app:main"

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu128" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.setuptools]
py-modules = ["app"]
